Fixed IE overflow bug

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,8 @@ html, body {
 	height: 100%;
 	width: 100%;
 	margin: 0;
+    padding: 0;
+    overflow-x: hidden;
     font-family: sans-serif;
     background-color: rgba(247, 247, 247, 1);
 }
